# python-core-42

./: README.md  fix_code_standards.py  results.txt  verify_code_standards.py
basics/: variables.py
module-00/: Readme.md
module-00/ex0/: ft_hello_garden.py
module-00/ex1/: ft_plot_area.py
module-00/ex2/: ft_harvest_total.py
module-00/ex3/: ft_plant_age.py
module-00/ex4/: ft_water_reminder.py
module-00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
module-00/ex6/: ft_garden_summary.py
module-00/ex7/: ft_seed_inventory.py
module-01/: Readme.md
module-01/ex0/: ft_garden_intro.py
module-01/ex1/: ft_garden_data.py
module-01/ex2/: ft_plant_growth.py
module-01/ex3/: ft_plant_factory.py
module-01/ex4/: ft_garden_security.py
module-01/ex5/: ft_plant_types.py
module-01/ex6/: ft_garden_analytics.py
module-02/: Readme.md
module-02/ex0/: ft_first_exception.py
module-02/ex1/: ft_different_errors.py
module-02/ex2/: ft_custom_errors.py
module-02/ex3/: ft_finally_block.py
module-02/ex4/: ft_raise_errors.py
module-02/ex5/: ft_garden_management.py
module-03/: Readme.md
module-03/ex0/: ft_command_quest.py
module-04/: Readme.md  ancient_fragment.txt  new_discovery.txt
module-05/: Readme.md
module-06/: Readme.md  ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
module-07/: Readme.md  __init__.py
module-08/: Readme.md  __init__.py
module-09/: Readme.md  __init__.py
module-09/ex1/: loading.py  pyproject.toml  requirements.txt
module-10/: Readme.md
(+62 files in other folders)
