[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Data loading demo for The Matrix (Module-09 ex1)"
authors = ["Zion Architect <zion@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "2.1.4"
numpy = "1.26.4"
matplotlib = "3.8.0"
requests = "2.31.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
